--- a/docs/DataFlows/10.Runs.md
+++ b/docs/DataFlows/10.Runs.md
@@ -14,13 +14,11 @@ Each time a DataFlow application is executed by a user or through external activ
 
 *Runs* are securable resources, similar to DataFlows, QueryViews, and WebApps. A *Run* and its included *Results* share the same access control entry.
 
-The 
-
 ## Run Settings
 
 In the DataFlow Designer Settings, there is an option to turn off Saving Runs.
 
-On the Run History page, the Run Settings panel allows the user to
+On the Run History page, the Run Settings panel allows the user to:
 
 - Set the how many runs should be saved and how long they will be stored for
 - **Keep All Errors**: Runs that errored will not be removed.
