--- a/docs/DataPortals/02.Create-DataPortals.md
+++ b/docs/DataPortals/02.Create-DataPortals.md
@@ -49,7 +49,7 @@ Each sheet in the Excel workbook represents a container which is a similar objec
 - [DisplayName:](06.Setting-Details/DisplayName.md) A human-friendly label that will be displayed above the input box for the field on the user interface. This can contain rich text written in [Markdown.](https://daringfireball.net/projects/markdown/)
 - [Description:](06.Setting-Details/Description.md) A longer description that can be displayed in a tooltip on the user interface to more fully explain the field.
 - [Type (required):](06.Setting-Details/Type.md) The name of the data type of the given field, such as integer or string, that the data will be stored as in the database.
-- [ControlType (required):](06.Setting-Details/ControlType.md) The type of form control field that will be shown to the user to input their data for this field. Examples are Text or Date.
+- [ControlType (required):](06.Setting-Details/ControlType.md) The type of field interface that the user will input their data into, also known as a [form control](https://www.w3.org/TR/2002/WD-xforms-20020118/slice8.html). Examples are a textbox ([Text](./05.Control-Details/Text.md)) or calendar date selection ([Date](./05.Control-Details/Date.md)), or a [checkbox](./05.Control-Details/CheckBox.md).
 - [Required:](06.Setting-Details/Required.md) Indicates whether the field is required.
 - For each ControlType, other columns can be added which specify settings. These are in "5.6 Container Fields", which provide additional features or restrictions on a field.
 
