--- a/docs/DataPortals/04.ContainerSheet.md
+++ b/docs/DataPortals/04.ContainerSheet.md
@@ -5,14 +5,11 @@
 Each sheet in the Excel workbook represents a container which is a similar object to a table. Column headings in a sheet define the control setting, with rows representing values. The following column headers are typically found on each of the Excel sheets:
 
 - [Name (required):](06.Setting-Details/Name.md) A whitespace-free name for the field. Think of this as the name you would give this field in a database.
-- [DisplayName:](06.Setting-Details/DisplayName.md) A human-friendly label that will be displayed above the input box for the field on the user interface.
+- [DisplayName:](06.Setting-Details/DisplayName.md) A human-friendly label that will be displayed above the input box for the field on the user interface. This can contain rich text written in [Markdown.](https://daringfireball.net/projects/markdown/)
 - [Description:](06.Setting-Details/Description.md) A longer description that can be displayed in a tooltip on the user interface to more fully explain the field.
 - [Type (required):](06.Setting-Details/Type.md) The name of the [data type](https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/built-in-types) of the given field, such as integer or string.
-- [ControlType (required):](06.Setting-Details/ControlType.md) The type of form control that will be shown to the user to input their data for this field.
+- [ControlType (required):](06.Setting-Details/ControlType.md) The type of field interface that the user will input their data into, also known as a [form control](https://www.w3.org/TR/2002/WD-xforms-20020118/slice8.html). Examples are a textbox ([Text](./05.Control-Details/Text.md)) or calendar date selection ([Date](./05.Control-Details/Date.md)), or a [checkbox](./05.Control-Details/CheckBox.md).
 - [Required:](06.Setting-Details/Required.md) Indicates whether the field is required.
-
-!!! note
-    Note the special case for ‘Label’ fields — DisplayName contains rich text written in [Markdown.](https://daringfireball.net/projects/markdown/)
 
 ## Control Type Settings (Additional Container Columns)
 
