--- a/docs/DataPortals/05.Categories.md
+++ b/docs/DataPortals/05.Categories.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # Categories
 
-Category sheets define the list of values a user can choose in a single/multi select field. After being defined in a container sheet, a separate "Category" sheet lists the category values. There are a few options for control types to display a category selection:
+Category sheets define the list of values a user can choose in a single/multi select field. After being defined in a container sheet, a separate "Category" sheet lists the category values. There are a few options for control types for a category selection:
 
 - [Category](./05.Control-Details/Category.md)
 - [Pill](./05.Control-Details/Pill.md)
@@ -36,7 +36,7 @@ Instead of a separate sheet for each category, multiple categories can be descib
 
 ## Visibility Controls
 
-There are a few ways to control whether category values are visible to the user from logic based on other selections/inputs in the current DataPortal container.
+There are a few ways to control whether category values are visible to the user from logic that refers to other selections/inputs in the current DataPortal container.
 
 - [MaskedCondition](./06.Setting-Details/MaskedCondition.md): controls visibility of the entire input field
 - [VisibilityCondition](./06.Setting-Details/VisibilityCondition.md): controls visibility of the entire input field
