--- a/docs/QueryViews/01.Overview.md
+++ b/docs/QueryViews/01.Overview.md
@@ -13,6 +13,6 @@ Composable QueryViews provides a modern web-based approach for running interacti
 
 QueryViews are great at creating live datagrids of data, and provide an interface for just-in-time, interactive analytics. With built-in paging, you can query millions of rows of data, and page through the results.
 
-To get started, simply click on the datagrid icon in the sidebar:
+To get started, click on the datagrid icon in the sidebar.
 
 ![Composable QueryView Sidebar](img/04.01.Img_1.png)
