Adding lightgallery extension to expand images

--- a/docs/QueryViews/02.Create-QueryView.md
+++ b/docs/QueryViews/02.Create-QueryView.md
@@ -17,7 +17,7 @@ After clicking the Create New QueryView icon, you will be presented with a new, 
 
 The QueryView Edit mode looks as follows:
 
-![Composable New QueryView](img/04.02.Img_1.png)
+![!Composable New QueryView](img/04.02.Img_1.png)
 
 Note the three sections: a set of configuration menu items on the left, the query template window, and the sample output window. You will need to set values in Info and Connection to run/save a query.
 
