Changing theme to material, lightbox enabled

--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -28,7 +28,7 @@ If Windows Authentication is enabled on your Composable instance, users will see
 
 As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log bypassing Windows Authentication, and using username/password credentials, simply click on Forms Login.
 
-## Windows Authentication
+## Azure Active Directory
 
 Composable also integrates with Azure Active Directory (AD) and allows users to login using their Microsoft Accounts.
 
