Fixing header types, testing image zoom

--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -7,7 +7,11 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
-# Registration & Login
+# Navigation
+
+This page provides examples of the login page and how to navigate through resources.
+
+## Registration & Login
 
 Using any modern web browser, point to your organization's Composable instance (e.g., [Demo Instance](https://cloud.composableanalytics.com) ). If you already have an account, simply enter your credentials on the login screen.
 
@@ -20,7 +24,7 @@ The login tab also has links that can help you reset your password if forgotten.
 !!! note
     Once registered, a system admin will need to approve your account, and you will receive an e-mail notification once approved.
 
-## Windows Authentication
+### Windows Authentication
 
 If Windows Authentication is enabled on your Composable instance, users will see their windows login information already populated, providing a seamless Single-Sign-On (SSO) experience.
 
@@ -28,17 +32,17 @@ If Windows Authentication is enabled on your Composable instance, users will see
 
 As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log bypassing Windows Authentication, and using username/password credentials, simply click on Forms Login.
 
-## Azure Active Directory
+### Azure Active Directory
 
 Composable also integrates with Azure Active Directory (AD) and allows users to login using their Microsoft Accounts.
 
-# Smart Navigation
+## Smart Navigation
 
 Composable has been designed in such a way that pages are organized logically, information and controls are easy to find and use, layouts are responsive down to the smallest desktop screen sizes, colors are thematic, and actions have obvious and visual consequences.
 
 For navigation, Composable has two main menus: sidebar and topbar.
 
-## SideBar
+### SideBar
 
 A collapsable sidebar appears to the left of each page. The sidebar provides contextual links for the DataFlow, QueryView, or any other resource you are viewing. Using these links, you can quickly manage, share, or build on your resources without hunting around to find the right page for each activity.
 
@@ -48,7 +52,7 @@ The sidebar also includes a global search widget. This is the fastest way to fin
 
 ![Composable NavBars](img/02.02.Composable2.0_NavBar.png)
 
-## TopBar
+### TopBar
 
 While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your user profile, version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
 
