--- a/docs/Composable-Platform/05.System-Administration.md
+++ b/docs/Composable-Platform/05.System-Administration.md
@@ -55,13 +55,13 @@ Composable Keys are 'environment variables' that can remain persistent, re-used,
 
 ![Composable Keys](img/02.05.Keys.png)
 
-# Permissions and Security
+## Permissions and Security
 
 There are several security infrastructure mechanisms used in Composable. At a transport level, all web traffic is encrypted and sent over SSL (Secure-Socket-Layer). Web server and activation processes run as limited privilege accounts. Processes accessing data use accounts with the minimum rights necessary for retrieving and saving the data.
 
 Composable users are given a considerable amount of flexibility when using modules and designing DataFlows. For example, users can issue web requests to remote web services, run queries on external databases, run custom code modules, and automatically send emails. Composable employs several features to not only protect the system from malicious users, but also to protect users from one another.
 
-## Sharing of Resources
+### Sharing of Resources
 
 Users currently have the ability to specify granular permissions on all Composable resources that they own (e.g., provide other users and groups the ability to execute, write, read, delete, ...).
 
@@ -91,7 +91,7 @@ After clicking `Share`, a modal will pop up, allowing users to:
 !!! note
     Groups are similiarly a securable resource in Composable, and permissions on them can be set. Note the circular dependency between groups and permissions. This allows users to create interesting permission functionality like allowing individuals within a group to see who else is in the group. This functionality can be achieved by giving the group read access to itself.
 
-# System Administration
+## System Administration
 
 System Administrators in Composable will see a gears icon in the right-hand side of the topbar allowing them to navigate to an Administration portal.
 
@@ -99,7 +99,7 @@ System Administrators in Composable will see a gears icon in the right-hand side
 
 The Administration portal consists of three tabs for management of users, extensions and modules.
 
-## User Management
+### User Management
 
 The user tab of the Administration portal provides an interface to list and search all users. Administrators can select a specific user and perform a number of functions, including:
 
@@ -109,13 +109,13 @@ The user tab of the Administration portal provides an interface to list and sear
 
 ![Composable Admin Portal - Users Tab](img/02.05.Admin-Users.png)
 
-## Extension Management
+### Extension Management
 
 The extensions tab of the Administration portal provides an interface to list and search across all extensions or plugins that is installed on the Composable instance.
 
 ![Composable Admin Portal - Extensions Tab](img/02.05.Admin-Extensions.png)
 
-## Modules Management
+### Modules Management
 
 The modules tab of the Administration portal provides an interface to list and search across all modules (used within DataFlow applications). Administrators can select a specific module and set its permissions, giving individual users or groups the ability to discover and use the modules. 
 
