--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -29,7 +29,7 @@ Custom Modules may also be created in code and brought into the Composable platf
 
 After importing a Custom Module Extension into the Composable instance, these custom modules appear as first-class modules in the Module Library. The following [Custom Modules Extensions](./07.Custom-Modules.md) page includes more detailed information on authoring your own Modules.
 
-# Module Features
+## Module Features
 
 ![Composable DataFlow Application](img/05.ModuleDescription.png)
 
