--- a/docs/Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/Getting-Started/03.Installation-and-Deployment.md
@@ -52,26 +52,29 @@ The Composable installation wizard will provide the following steps:
 1. Check system and software requirements.
     - The installer will check system requirements, space availability and automatically download and install any required software, such as a back-end database store. Specifically, SQL Server Express will be downloaded and installed as a back-end database if required. Composable will leverage the full-text indexer if you install SQL Server with advanced services.
 
-    ![Composable Installation Wizard](img/01.03.ComposableInstaller_1.png)
+    <img src="img/01.03.ComposableInstaller_1.png" alt="Composable Installation Wizard" style="zoom: 50%;" />
     
 2. With all system and software requirements met, the next steps in the Composable installation will be presented.
 
-    ![Composable Installation Wizard](img/01.03.ComposableInstaller_2.png)
+    <img src="img/01.03.ComposableInstaller_2.png" alt="Composable Installation Wizard" style="zoom:50%;" />
 
 3. **End-User License Agreement**
     - You will be asked to accept the terms in the License Agreement. 
 
-    ![Composable Installation Wizard](img/01.03.ComposableInstaller_3.png)
+        ![!Composable Installation Wizard](img/01.03.ComposableInstaller_3.png)
 
+    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_4a.png" data-lg-id="36d4dfab-9b4c-4d2c-a483-63ba878e21da"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_4a.png" style="zoom: 40%;"></a></div>
+    
 4. **Setup Type**
+    
     - Installation options will be presented. For a single machine install, choose Complete. If you want to only install certain components, choose Custom.
-
-    ![Composable Installation Wizard](img/01.03.ComposableInstaller_4a.png)
-
+    
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_4a.png)
+    
     - The components include databases, NT services, and a web application.
-
+    
     ![Composable Installation Wizard](img/01.03.ComposableInstaller_4b.png)
-
+    
 5. **Membership Store Settings**
     - If using SQL Express, the local server and instance would be .\SQLEXPRESS. For the default host, it’s just “.”
 
