--- a/docs/Composable-Platform/04.Product-Areas.md
+++ b/docs/Composable-Platform/04.Product-Areas.md
@@ -7,6 +7,8 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
+# Product Areas
+
 Composable is a full-stack dataops (data operations) environment for seamlessly executing all levels of data orchestration and processing, e.g., Extraction, Transformation, and Loading (ETL); Querying, Processing, Visualization and Dissemination.
 
 The main capabilities offered by Composable are organized around product areas for:
@@ -15,49 +17,49 @@ The main capabilities offered by Composable are organized around product areas f
 - Data Exploration
 - Data Modeling & Storage
 
-# Data Processing & Transformations
+## Data Processing & Transformations
 
-## [DataFlows](../DataFlows/01.Overview.md)
+### [DataFlows](../DataFlows/01.Overview.md)
 
 Composable DataFlows are data processing and analytical workflows, utilizing Composable's flow-based programming method. Each dataflow consists of modules that are connected together to produce higher-level functionality.
 
 ![Composable DataFlows](img/02.04.DataFlows.png)
 
-## [WebApps](../WebApps/01.Overview.md)
+### [WebApps](../WebApps/01.Overview.md)
 
 Composable WebApps are full web applications, including visualizations built with d3.js, built and seamlessly integrated with Composable using well-defined web services and API endpoints.
 
 ![Composable WebApps](img/02.04.WebApps.png)
 
-# Data Exploration
+## Data Exploration
 
-## [QueryViews](../QueryViews/01.Overview.md)
+### [QueryViews](../QueryViews/01.Overview.md)
 
 Composable QueryViews provide an interface for distributed queries and live data grids. 
 
 ![Composable QueryViews](img/02.04.QueryViews.png)
 
-## [DashBoards](../DashBoards/01.Overview.md)
+### [DashBoards](../DashBoards/01.Overview.md)
 
 Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
 
 ![Composable DashBoards](img/02.04.DashBoards.png)
 
-## [DataRepository](../DataRepository/01.Overview.md)
+### [DataRepository](../DataRepository/01.Overview.md)
 
 Composable DataRepository allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
 
 ![Composable DataExplorer](img/02.04.DataExplorer.png)
 
-# Data Modeling & Storage
+## Data Modeling & Storage
 
-## [DataPortals](../DataPortals/01.Overview.md)
+### [DataPortals](../DataPortals/01.Overview.md)
 
 Composable DataPortals provides a rapid application development environment for modelling data and automatically generating the web and business layers and custom web user interface.
 
 ![Composable DataPortals](img/02.04.DataPortals.png)
 
-## EntityHub
+### EntityHub
 
 Composable EntityHub is a machine-learning driven approach to Master Data Management, providing a unique capability to identifying, creating and de-duplicating entities across datasets, going beyond simple deterministic and probabilistic (fuzzy matching) methods.
 
